unpackaged/main/default/objects/Recurring_Billing_Snap_Shot__c/Recurring_Billing_Snap_Shot__c.object-meta.xml
<CustomObject>
    <description>Used to record balance of recurring billings funded, unfunded and total each day for historical purposes</description>
    <label>Recurring Billing Snap Shot</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>RecordID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Billing Snap Shots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>