unpackaged/main/default/objects/Recurring_Billing_Snap_Shot__c/fields/TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>TimeStamp</label>
    <type>DateTime</type>
</CustomField>