unpackaged/main/default/objects/Recurring_Billing_Snap_Shot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SnapShot_Date__c</columns>
    <columns>NAME</columns>
    <columns>Acitve__c</columns>
    <columns>Description__c</columns>
    <columns>Funded_Amount__c</columns>
    <columns>Unfunded_Amount__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>TimeStamp__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>